[tool.poetry]
name = "demo-python-e2e-encryption"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_e2e_encryption"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
